--- a/Character_Mov/index.html
+++ b/Character_Mov/index.html
@@ -9,6 +9,9 @@
 <body>
     
     <canvas id = "canvas1" > </canvas>
+    <div class="controls" >
+       
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
