--- a/parallex/index.html
+++ b/parallex/index.html
@@ -8,8 +8,12 @@
     <!-- <link rel="stylesheet" href="./backgroundLayers/layer-1.png"> -->
 </head>
 <body>
-    <canvas id = "canvas1"></canvas>
-
+    
+    <div id="container">
+        <canvas id = "canvas1"></canvas>
+        <p>Game speed: <span id="showGameSpeed"></span></p>
+        <input type="range" min = "0" max = "20" value = "5" id="slider" class = "slider">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
