--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edge Runner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
-    <script src="script.js"></script>
+    <img id ="player" src="resources/player.png" alt="">
+    <script type = "module" src="script.js"></script>
 </body>
 </html>
