added fly enemy

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <canvas id="canvas1"></canvas>
     <img id ="player" src="resources/player.png" alt="">
+    <img id ="layer1" src="resources/layer-1.png" alt="">
+    <img id ="layer2" src="resources/layer-2.png" alt="">
+    <img id ="layer3" src="resources/layer-3.png" alt="">
+    <img id ="layer4" src="resources/layer-4.png" alt="">
+    <img id ="layer5" src="resources/layer-5.png" alt="">
+    <img id ="enemy_fly" src="resources/enemy_fly.png" alt="">
+    <img id ="enemy_plant" src="resources/enemy_plant.png" alt="">
+    <img id ="enemy_spider_big" src="resources/enemy_spider_big.png" alt="">
     <script type = "module" src="script.js"></script>
 </body>
 </html>
