added fire animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <img id ="enemy_fly" src="resources/enemy_fly.png" alt="">
     <img id ="enemy_plant" src="resources/enemy_plant.png" alt="">
     <img id ="enemy_spider_big" src="resources/enemy_spider_big.png" alt="">
+    <img id ="fire" src="resources/fire.png" alt="">
+
     <script type = "module" src="script.js"></script>
 </body>
 </html>
