--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img id ="enemy_plant" src="resources/enemy_plant.png" alt="">
     <img id ="enemy_spider_big" src="resources/enemy_spider_big.png" alt="">
     <img id ="fire" src="resources/fire.png" alt="">
+    <img id ="colAni" src="resources/boom.png" alt="">
 
     <script type = "module" src="script.js"></script>
 </body>
