added username feature and rstart feature

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="usernamePromptOverlay">
+    <div id="usernamePromptBox">
+        <h1>Welcome!</h1>
+        <p>Please enter your display name to play:</p>
+        <input type="text" id="usernameInput" placeholder="Your Name" />
+        <button id="saveUsernameButton">Start Game</button>
+    </div>
+</div>
+
+
     <canvas id="canvas1"></canvas>
+    <button id="restartButton">Restart Game</button>
     <img id ="player" src="resources/player.png" alt="">
     <img id ="layer1" src="resources/layer-1.png" alt="">
     <img id ="layer2" src="resources/layer-2.png" alt="">
